src/objects/TAT_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Description__c</fullName>
        <label>TAT Stage Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Long_Name__c</fullName>
        <label>TAT Stage Long Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Short_Name__c</fullName>
        <label>TAT Stage Short Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Stage__c</fullName>
        <label>TAT Stage</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TAT Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TAT_Stage__c</columns>
        <columns>TAT_Stage_Short_Name__c</columns>
        <columns>TAT_Stage_Long_Name__c</columns>
        <columns>TAT_Stage_Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAT Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>